Fix course list on mobile

--- a/app/assets/scss/components/resume-list.scss
+++ b/app/assets/scss/components/resume-list.scss
@@ -68,10 +68,9 @@
       margin-left: 10px;
 
       li{
-        display: inline;
-        white-space: nowrap;
+        display: inline-block;
         background: transparentize($color-accent, 0.95);
-        padding: 1px 8px;
+        padding: 0px 8px;
         border-radius: 8px;
       }
     }
